src/test/custom/invalid/import/duplicateStruct.wacc
# contain duplicate struct define with its import

import duplicateStruct.hwacc

begin
  struct a is {
    int i,
    int j
  }

  skip
  
end
